sass/partial/_hero.sass
%fade-in
  opacity: 1
  +transition(opacity .3s)
  .is-loading &
    opacity: 0

+keyframe(loading)
  10%, 90%
    +transform(translateX(0))
  40%, 60%
    +transform(translateX(30px))

// wrapper
// =========================================================================

.hero
  position: relative
  overflow: hidden
  margin: 0 -24px

  +pad
    margin: 0 -48px

  +desktop
    margin: 0 -12px 36px
    &:before
      content: ''
      display: block
      position: absolute
      left: 12px
      top: 0
      right: 12px
      bottom: 0
      border: 1px solid #e5e5e5
      border-radius: 2px

.hero_slides_wrapper
  margin: 0 24px
  visibility: visible

  a
    color: inherit

  .is-loading &
    visibility: hidden

  +pad
    margin: 0 48px

  +desktop
    margin-left: 12px
    width: calc(100% * 2 / 3 - 12px)
    &:after
      position: absolute
      right: 0
      top: 0
      display: block
      width: 20px
      height: 100%
      background: #fff
      content: ''

.hero_menu_wrapper
  position: absolute
  right: 12px
  top: 0
  bottom: 0
  width: calc(100% / 3 - 13px)
  z-index: 1
  background: #fff
  display: none
  border: 1px solid rgba(#000, .1)
  border-radius: 0 2px 2px 0
  @extend %fade-in

  +desktop
    display: block

.hero_pagination_wrapper
  text-align: center
  line-height: 0
  margin: 12px auto 0
  @extend %fade-in


  +desktop
    display: none

.hero_slides,
.hero_pagination,
.hero_menu
  +reset-list-style

// loading indicator
// =========================================================================

.hero_loading_indicator
  position: absolute
  width: 50px
  height: 20px
  left: 50%
  top: 50%
  margin-top: -10px
  margin-left: -25px
  border-radius: 2px
  background: #f6f6f6
  opacity: 0
  +transition(opacity .5s)

  &:before
    position: absolute
    display: block
    width: 20px
    height: 20px
    border-radius: 2px
    background: $color-primary
    content: ''
    +animation(0, 1.5s, loading, infinite)

  .is-loading &
    opacity: 1

// menu
// =========================================================================

.hero_menu
  height: calc(100% - 50px)

.hero_menu_title
  margin-bottom: 0
  padding: 0 12px
  padding-left: 16px
  line-height: 50px
  height: 50px
  font-size: 1.3em
  font-weight: bold
  color: $color-primary

.hero_menu_item
  height: 20%
  box-sizing: border-box
  border-top: 1px solid #ddd

  &:last-child
    border-radius: 0 0 2px 2px

  &.is-active
    background: #fafafa
    box-shadow: inset 2px 1px 2px rgba(#000, .2)
    position: relative
    border-top-color: transparent

    @for $i from 1 through length($color-list)
      &.is-color#{$i} .hero_menu_link:before
        background-color: nth($color-list, $i)

.hero_menu_link
  display: block
  height: 100%
  color: #000
  &:hover
    color: #000

  &:before, span
    display: inline-block
    vertical-align: middle

  span
    box-sizing: border-box
    width: calc(100% - 5px)
    padding: 0 15px
    line-height: 21px
    font-size: 13px
    +transition(font-size .3s)
    +desktop
      font-size: 15px

  &:before // active color bar
    position: relative
    margin-left: -1px
    width: 5px
    height: calc(100% + 1px)
    content: ''

  &:hover
    text-decoration: none

// slides
// =========================================================================

.hero_slides, .hero_slide
  height: 80vh
  max-height: 320px
  +at-breakpoint(480px)
    height: 0
    max-height: none
    padding-bottom: 60%
  +desktop
    padding-bottom: 65%

.hero_slides
  position: relative

.hero_slide
  left: 0
  width: 100%
  background-position: center center
  background-repeat: no-repeat
  background-size: cover
  position: absolute
  color: white
  border-radius: 2px
  overflow: hidden
  +transition(transform .5s)
  +transform(translateX(0))
  +pad
    border-radius: 2px 0 0 2px

  .is-loading &
    +transform(translateX(-110%))
    +desktop
      +transform(translateX(160%))

  .is-entering &
    @for $i from 1 through 5
      &:nth-child(#{$i})
        +transition(transform 1.5s #{.15 * $i}s)

  &:before // gradient overlay
    position: absolute
    display: block
    width: 100%
    height: 100%
    content: ''
    border-radius: 2px
    +background-image(linear-gradient(15deg, rgba(#000, .5), rgba(#000, 0)))

  &.is-panning
    +transition(none)

  &.is-active:last-child
    box-shadow: none

  &.is-active ~ &
    +transform(translateX(-100%))
    +desktop
      +transform(translateX(calc(100% - 1px)))

.hero_slide_info
  position: absolute
  left: 15px
  bottom: 15px
  right: 15px

.hero_slide_title
  font-weight: bold
  +adjust-font-size-to(18px, 1)
  margin: 10px 0
  display: block
  &:hover
    text-decoration: none
  +pad
    +adjust-font-size-to(28px, 1.5)
    margin-right: 40px

.hero_slide_meta.post_meta
  li
    color: white
    &:after
      background-color: $color-gray-dark

  .post_author, .post_tag
    color: white

// pagination
// =========================================================================

.hero_pagination
  display: inline-block

.hero_pagination_item
  position: relative
  float: right
  width: 20px
  height: 20px
  cursor: pointer

  &:after
    content: ''
    position: absolute
    top: 50%
    left: 50%
    margin-top: -5px
    margin-left: -5px
    width: 10px
    height: 10px
    border-radius: 50%
    border: 1px solid rgba(#000, .2)

  &.is-active:after
    border-color: $color-primary
    background: $color-primary

